nova_tests/plan118/neg/plan118_1_closeout_t9_neg_addr_of_record_literal.nv
// Plan 118.6 T9 NEG — addr_of() removed → E_ADDR_OF_REMOVED.
// EXPECT_COMPILE_ERROR E_ADDR_OF_REMOVED
module neg.plan118_1_closeout_t9_neg_addr_of_record_literal
type Acc { id i64 }
test "addr_of removed — record literal case also gives E_ADDR_OF_REMOVED" {
    unsafe {
        ro p = addr_of(Acc { id: 1 })
    }
}
